racunjanje udaljenosti između dvije gps kordinate  ,rosjecnu brzinu i prosjecni pređeni put

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,7 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_statistics">Statistics</string>
     <string name="Statistic">Statistic</string>
+    <string name="avgSpeed">Average Speed</string>
+    <string name="avgDistance">Average Distance</string>
 
 </resources>
